--- a/generators/doc/templates/md.jinja
+++ b/generators/doc/templates/md.jinja
@@ -1,9 +1,12 @@
 {%- macro addr_block_def(node) -%}
 {{'#' * get_hier_depth(node)}} {{get_abs_addr(node)}}-{{get_end_addr(node)}} {{get_inst_name(node)}}
 Hierarchy: *{{get_hier_name(node)}}*
+
 Absolute Base Address: {{get_abs_addr(node)}}
+
 Size: {{get_size(node)}} Bytes
 {%- if get_property(node, "desc") is not none %}
+
 Description: {{get_property(node, "desc")}}
 {%- endif %}
 {% endmacro %}
@@ -27,23 +30,27 @@ Description: {{get_property(node, "desc")}}
 {%- macro field_desc(node) %}
 **{{get_inst_name(node)}}**
 {%- if get_property(node, "name") is not none %}
-    - named as: {{get_property(node, "name")}}
+  - named as: {{get_property(node, "name")}}
 {%- endif %}
 {%- if get_property(node, "hj_syncresetsignal") is not none %}
-    - synchronous reset signals: *{{get_property(node, "hj_syncresetsignal")}}*
+  - synchronous reset signals: *{{get_property(node, "hj_syncresetsignal")}}*
 {%- endif %}
 {%- if get_property(node, "desc") is not none %}
-    - description: {{get_property(node, "desc")}}
+  - description: {{get_property(node, "desc")|indent(2)}}
 {%- endif %}
 {%- endmacro -%}
 
 {%- macro reg_def(node) -%}
 {{'#' * get_hier_depth(node)}} {{get_abs_addr(node)}}-{{get_end_addr(node)}} {{get_inst_name(node)}}
 Hierarchy: *{{get_hier_name(node)}}*
+
 Absolute Address: {{get_abs_addr(node)}}
+
 Base Offset: {{get_offset(node)}}
+
 Size: {{get_size(node)}} Bytes
 {%- if get_property(node, "desc") is not none %}
+
 Description: {{get_property(node, "desc")}}
 {%- endif %}
 {% raw %}
